<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Groups.GroupSettingsActivity">

    <EditText
        android:textColorHint="?attr/hintColor"
        android:id="@+id/et_spamgroups"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input"
        android:elevation="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/id"
        android:inputType="textMultiLine"
        android:maxHeight="100dp"
        android:padding="10dp"
        android:textColor="?attr/textColor"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textColorHint="?attr/hintColor"
        android:id="@+id/et_spamtext"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input"
        android:elevation="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/text"
        android:inputType="textMultiLine"
        android:maxHeight="100dp"
        android:textColor="?attr/textColor"
        android:padding="10dp"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_spamgroups" />


    <EditText
        android:textColorHint="?attr/hintColor"
        android:id="@+id/et_photos"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input"
        android:elevation="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/id_photo"
        android:inputType="textMultiLine"
        android:maxHeight="100dp"
        android:textColor="?attr/textColor"
        android:padding="10dp"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_spamtext" />

    <EditText
        android:textColorHint="?attr/hintColor"
        android:id="@+id/delay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input"
        android:textColor="?attr/textColor"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/delay"
        android:inputType="number"
        android:padding="10dp"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_photos" />

    <Button
        android:id="@+id/b_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="Сохранить"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delay" />
</androidx.constraintlayout.widget.ConstraintLayout>